Add more ids for clarity

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,12 @@
     </head>
     <body>
         <h1>ToDo List Memory Leak Demo</h1>
+        <div>
+            <input id="garbage" type="checkbox" checked="checked" />Leak completed ToDos
+        </div>
+        <div>
+            <button id="clean">Clean up</button>
+        </div>
         <h2>ToDo</h2>
         <div id="list"></div>
         <h2>Create New</h2>
