--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,58 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>ToDo List Memory Leak Demo</title>
-        <style>
-            body {
-                font-family: Arial, Helvetica, sans-serif;
-                background-color: #272727;
-                color: white;
-            }
-        </style>
-    </head>
-    <body>
+
+<head>
+    <title>ToDo List Memory Leak Demo</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #272727;
+            color: white;
+        }
+
+        #app {
+            width: 600px;
+            margin: auto;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="app">
         <h1>ToDo List Memory Leak Demo</h1>
+        <p>
+            Instructions: Start Airlock recording, then create new ToDo items to attach them to the document tree. A ToDo item is structured as follows.
+        </p>
+        <pre><code>
+&lt;div&gt;
+    &lt;button&gt;
+    &lt;span&gt;
+&lt;/div&gt;
+        </pre></code>
+        <p>
+            When the "Leak completed ToDos" checkbox is checked, the <code>&lt;span&gt;</code> element will be saved in the <code>leakyElements</code> global array.
+        </p>
+        <p>
+            Complete ToDo items to detach them from the document tree. Collect garbage using the Memory tool, then query Airlock to view elements that are still in memory but are not attached to the document.
+        </p>
+        <p>
+            Airlock presents leaky elements by their topmost parent. Use 🔗 Detach roots to destructively remove the parent-child relationship between elements in a tree. Collect garbage again so only the leaked element is preserved in memory.
+        </p>
+        <p>
+            Examine leaked items by copying their ID on the right and searching the Memory tool with Ctrl+F. The Retainers window 
+        </p>
+        <hr>
         <div>
             <input id="garbage" type="checkbox" checked="checked" />Leak completed ToDos
-        </div>
-        <div>
             <button id="clean">Clean up</button>
         </div>
         <h2>ToDo</h2>
         <div id="list"></div>
         <h2>Create New</h2>
         <input id="input" /><button id="create">Create</button>
-        <script src="script.js"></script>
-    </body>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+
 </html>
