--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             Airlock presents leaky elements by their topmost parent. Use 🔗 Detach roots to destructively remove the parent-child relationship between elements in a tree. Collect garbage again so only the leaked element is preserved in memory.
         </p>
         <p>
-            Examine leaked items by copying their ID on the right and searching the Memory tool with Ctrl+F. The Retainers window 
+            Examine leaked items by copying their ID on the right and searching the Memory tool with Ctrl+F. The Retainers window displays references to the search results, which should include <code>leakyElements</code>.
         </p>
         <hr>
         <div>
